// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StepKubeconfig should match snapshot 1`] = `
<div>
  <section
    class="flex flex-col"
  >
    <div
      class="mb-10 flex flex-col gap-2"
    >
      <h1
        class="text-neutral text-2xl font-bold"
      >
        Kubeconfig
      </h1>
      <p
        class="text-sm text-neutral-350"
      >
        Upload your Kubeconfig file here.
      </p>
    </div>
    <form>
      <div
        class="mb-10"
      >
        <div
          class="dropzone"
          role="presentation"
          tabindex="0"
        >
          <input
            data-testid="drop-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="flex min-h-[140px] w-full cursor-pointer items-center justify-center rounded border border-neutral-250 bg-neutral-100 text-xs text-neutral-350 transition-all duration-150 ease-in-out hover:border-neutral-300 border-dashed"
          >
            <div
              class="flex h-full flex-col items-center justify-center text-center text-neutral-350"
            >
              <i
                aria-hidden="true"
                class="fa-regular fa-file-arrow-down mb-2 text-xl"
              />
              <p
                class="text-ssm"
              >
                Click to import your 
                kubeconfig
                 file or drag and drop it
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand text-sm h-10 px-3 rounded-lg bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
          type="button"
        >
          Back
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
          data-testid="button-submit"
          disabled=""
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </section>
</div>
`;

exports[`StepKubeconfig should match snapshot with data 1`] = `
<div>
  <section
    class="flex flex-col"
  >
    <div
      class="mb-10 flex flex-col gap-2"
    >
      <h1
        class="text-neutral text-2xl font-bold"
      >
        Kubeconfig
      </h1>
      <p
        class="text-sm text-neutral-350"
      >
        Upload your Kubeconfig file here.
      </p>
    </div>
    <form>
      <div
        class="mb-10"
      >
        <div
          class="flex items-center gap-2 rounded border border-neutral-200 p-3"
        >
          <div
            class="p-2"
          >
            <i
              aria-hidden="true"
              class="fa-regular fa-file-lines "
            />
          </div>
          <div
            class="flex grow flex-col text-xs"
          >
            <span
              class="font-medium text-neutral-400"
            >
              file.yaml
            </span>
            <span
              class="text-neutral-350"
            >
              1234
               Ko
            </span>
          </div>
          <div>
            <button
              class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand text-xs h-7 px-2 rounded bg-surface-neutral border border-neutral hover:border-neutral-component text-neutral"
              type="button"
            >
              <i
                aria-hidden="true"
                class="fa-regular fa-trash "
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex justify-between"
      >
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand text-sm h-10 px-3 rounded-lg bg-surface-neutral-component hover:bg-surface-neutral-componentHover text-neutral"
          type="button"
        >
          Back
        </button>
        <button
          class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
          data-testid="button-submit"
          disabled=""
          type="submit"
        >
          Continue
        </button>
      </div>
    </form>
  </section>
</div>
`;
